@@ -1,4 +1,10 @@
 Changes in release 3.3.0
+   * The default auth is changed to "bsdtcp", if you are using the default bsd
+     then you must add it to your configuration.
+       o in amanda.conf
+       o in amanda-client.conf
+       o in dumptype/disklist
+       o in xinetd (if no '-auth' argument to amandad)
    * chg-aggregate: new changer that use other changer sequentially.
    * meta-volume
    * Add meta label in tapelist file
